base/docker-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-demo
spec:
  replicas: 0
  selector:
    matchLabels:
      app: docker-demo
  template:
    metadata:
      labels:
        app: docker-demo
    spec:
      containers:
        - name: docker-demo
          image: aug12018/dockerdemo:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
