base/docker-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-demo-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "nerdsbythehour.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: docker-demo
                port:
                  number: 80 # This refers to the port number on which the service listens for traffic.
